fix: correct Property and User entity mappings