@@ -6,6 +6,7 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.AccessLevel;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
@@ -18,18 +19,18 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 @Entity
 @NoArgsConstructor
-//@AllArgsConstructor
+// @AllArgsConstructor
 @Getter
 @Setter
 @Table(name = "users")
-public class User extends AbstractEntity {
+public class User extends AbstractEntity implements UserDetails {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(unique = true, nullable = false, updatable = false)
-    private UUID uuid;   
+    @Column(name = "uid", unique = true, nullable = false, updatable = false)
+    private UUID uuid;
 
     @Column(unique = true)
     private String username;
@@ -74,7 +75,7 @@ public class User extends AbstractEntity {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        Set<GrantedAuthority> grantedAuthorities =  new HashSet<>();
+        Set<GrantedAuthority> grantedAuthorities = new HashSet<>();
         grantedAuthorities.add(new SimpleGrantedAuthority("ROLE_" + role.getName()));
         role.getCapabilities()
                 .forEach(capability -> grantedAuthorities.add(new SimpleGrantedAuthority(capability.getName())));
@@ -100,7 +101,6 @@ public class User extends AbstractEntity {
     public boolean isEnabled() {
         return !isDeleted();
     }
-    
 
     @PrePersist
     public void initializeUUID() {
@@ -109,7 +109,8 @@ public class User extends AbstractEntity {
 
     @Override
     public boolean equals(Object o) {
-        if (!(o instanceof User user)) return false;
+        if (!(o instanceof User user))
+            return false;
         return Objects.equals(getUuid(), user.getUuid());
     }
 
@@ -119,66 +120,74 @@ public class User extends AbstractEntity {
     }
 
     public Set<Property> getAllProperties() {
-        return Collections.unmodifiableSet(properties);
+        return Set.copyOf(properties);
     }
 
-     public void addProperty(Property property) {
-        if (properties == null) properties = new HashSet<>();
+    public void addProperty(Property property) {
+        if (properties == null)
+            properties = new HashSet<>();
         properties.add(property);
-        property.setUser(this);
+        property.setHost(this);
     }
 
     public void removeProperty(Property property) {
-        if (properties == null) return;
+        if (properties == null)
+            return;
         properties.remove(property);
-        property.setUser(null);
+        property.setHost(null);
     }
 
     public Set<Booking> getAllBookings() {
-        return Collections.unmodifiableSet(bookings);
+        return Set.copyOf(bookings);
     }
 
     public void addBooking(Booking booking) {
-        if (bookings == null) bookings = new HashSet<>();
+        if (bookings == null)
+            bookings = new HashSet<>();
         bookings.add(booking);
         booking.setGuest(this);
     }
 
     public void removeBooking(Booking booking) {
-        if (bookings == null) return;
+        if (bookings == null)
+            return;
         bookings.remove(booking);
         booking.setGuest(null);
     }
 
     public Set<Review> getAllReviews() {
-        return Collections.unmodifiableSet(reviews);
+        return Set.copyOf(reviews);
     }
 
     public void addReview(Review review) {
-        if (reviews == null) reviews = new HashSet<>();
+        if (reviews == null)
+            reviews = new HashSet<>();
         reviews.add(review);
         review.setReviewer(this);
     }
 
     public void removeReview(Review review) {
-        if (reviews == null) return;
+        if (reviews == null)
+            return;
         reviews.remove(review);
         review.setReviewer(null);
     }
 
     public Set<Message> getAllMessages() {
-        return Collections.unmodifiableSet(messages);
+        return Set.copyOf(messages);
     }
 
     public void addMessage(Message message) {
-        if (messages == null) messages = new HashSet<>();
+        if (messages == null)
+            messages = new HashSet<>();
         messages.add(message);
         message.setSender(this);
     }
 
     public void removeMessage(Message message) {
-        if (messages == null) return;
+        if (messages == null)
+            return;
         messages.remove(message);
         message.setSender(null);
-    }   
+    }
 }
